// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`format output per seller and buyer country > seller Atlantis: every format is byte-identical to the pinned output 1`] = `
{
  "Atlantis cii": "throws 14ab22cf8d32fba1",
  "Atlantis fa3": "c2cc6f2498ce4cea",
  "Atlantis fatturapa": "209fb6e438229fde",
  "Atlantis peppol-bis": "throws 14ab22cf8d32fba1",
  "Atlantis semantic default": "throws 14ab22cf8d32fba1",
  "Atlantis semantic full": "throws 14ab22cf8d32fba1",
  "Atlantis ubl": "throws 14ab22cf8d32fba1",
  "Atlantis xrechnung": "throws 14ab22cf8d32fba1",
  "DE cii": "throws 14ab22cf8d32fba1",
  "DE fa3": "a4ed372fdff900ce",
  "DE fatturapa": "db186c039703735f",
  "DE peppol-bis": "throws 14ab22cf8d32fba1",
  "DE semantic default": "throws 14ab22cf8d32fba1",
  "DE semantic full": "throws 14ab22cf8d32fba1",
  "DE ubl": "throws 14ab22cf8d32fba1",
  "DE xrechnung": "throws 14ab22cf8d32fba1",
  "DZ cii": "throws 14ab22cf8d32fba1",
  "DZ fa3": "0bdd9ba52ba1a656",
  "DZ fatturapa": "9c7a6087178f4fbc",
  "DZ peppol-bis": "throws 14ab22cf8d32fba1",
  "DZ semantic default": "throws 14ab22cf8d32fba1",
  "DZ semantic full": "throws 14ab22cf8d32fba1",
  "DZ ubl": "throws 14ab22cf8d32fba1",
  "DZ xrechnung": "throws 14ab22cf8d32fba1",
  "FR cii": "throws 14ab22cf8d32fba1",
  "FR fa3": "79ffbf449ab3c29c",
  "FR fatturapa": "53e288e72fabd771",
  "FR peppol-bis": "throws 14ab22cf8d32fba1",
  "FR semantic default": "throws 14ab22cf8d32fba1",
  "FR semantic full": "throws 14ab22cf8d32fba1",
  "FR ubl": "throws 14ab22cf8d32fba1",
  "FR xrechnung": "throws 14ab22cf8d32fba1",
  "IT cii": "throws 14ab22cf8d32fba1",
  "IT fa3": "dd88272f950a51df",
  "IT fatturapa": "55b97ce36871a6af",
  "IT peppol-bis": "throws 14ab22cf8d32fba1",
  "IT semantic default": "throws 14ab22cf8d32fba1",
  "IT semantic full": "throws 14ab22cf8d32fba1",
  "IT ubl": "throws 14ab22cf8d32fba1",
  "IT xrechnung": "throws 14ab22cf8d32fba1",
  "NL cii": "throws 14ab22cf8d32fba1",
  "NL fa3": "509ba7e56ad9f3d0",
  "NL fatturapa": "418f17274da73054",
  "NL peppol-bis": "throws 14ab22cf8d32fba1",
  "NL semantic default": "throws 14ab22cf8d32fba1",
  "NL semantic full": "throws 14ab22cf8d32fba1",
  "NL ubl": "throws 14ab22cf8d32fba1",
  "NL xrechnung": "throws 14ab22cf8d32fba1",
  "PL cii": "throws 14ab22cf8d32fba1",
  "PL fa3": "b2ae121370cdb639",
  "PL fatturapa": "641a6f56b433019b",
  "PL peppol-bis": "throws 14ab22cf8d32fba1",
  "PL semantic default": "throws 14ab22cf8d32fba1",
  "PL semantic full": "throws 14ab22cf8d32fba1",
  "PL ubl": "throws 14ab22cf8d32fba1",
  "PL xrechnung": "throws 14ab22cf8d32fba1",
  "PT cii": "throws 14ab22cf8d32fba1",
  "PT fa3": "676f70f7887dbc79",
  "PT fatturapa": "f9d3ac04754c67f5",
  "PT peppol-bis": "throws 14ab22cf8d32fba1",
  "PT semantic default": "throws 14ab22cf8d32fba1",
  "PT semantic full": "throws 14ab22cf8d32fba1",
  "PT ubl": "throws 14ab22cf8d32fba1",
  "PT xrechnung": "throws 14ab22cf8d32fba1",
  "none cii": "throws 14ab22cf8d32fba1",
  "none fa3": "d1f55d39fc5ee0b8",
  "none fatturapa": "fc700071886d151e",
  "none peppol-bis": "throws 14ab22cf8d32fba1",
  "none semantic default": "throws 14ab22cf8d32fba1",
  "none semantic full": "throws 14ab22cf8d32fba1",
  "none ubl": "throws 14ab22cf8d32fba1",
  "none xrechnung": "throws 14ab22cf8d32fba1",
}
`;

exports[`format output per seller and buyer country > seller DE: every format is byte-identical to the pinned output 1`] = `
{
  "Atlantis cii": "throws 8c78e784db9d1906",
  "Atlantis fa3": "d3643278f4cbcc1c",
  "Atlantis fatturapa": "aa9d384aadde6fe8",
  "Atlantis peppol-bis": "throws 8c78e784db9d1906",
  "Atlantis semantic default": "throws 8c78e784db9d1906",
  "Atlantis semantic full": "throws 8c78e784db9d1906",
  "Atlantis ubl": "throws 8c78e784db9d1906",
  "Atlantis xrechnung": "throws 8c78e784db9d1906",
  "DE cii": "709af6011018347d",
  "DE fa3": "9259c355336fa449",
  "DE fatturapa": "abf5566977769099",
  "DE peppol-bis": "4085e10c51f8d416",
  "DE semantic default": "3b03a14f256948af",
  "DE semantic full": "3b03a14f256948af",
  "DE ubl": "23424cae3052f5bd",
  "DE xrechnung": "de369d09a44320ba",
  "DZ cii": "7a01d28f38a588e6",
  "DZ fa3": "3c88a1644e2b6ceb",
  "DZ fatturapa": "02e6d865c55fd021",
  "DZ peppol-bis": "eb34b555f463d09e",
  "DZ semantic default": "16827eb2f6e08eac",
  "DZ semantic full": "16827eb2f6e08eac",
  "DZ ubl": "91a8491b8af215b3",
  "DZ xrechnung": "d91676c6d9458f44",
  "FR cii": "591635d569c4b5d2",
  "FR fa3": "5efc752a16a4caa3",
  "FR fatturapa": "53e790f9ddd63d6c",
  "FR peppol-bis": "97fc1a466a076c86",
  "FR semantic default": "3b046966e45b6bd1",
  "FR semantic full": "3b046966e45b6bd1",
  "FR ubl": "9ab1d64fda125d7d",
  "FR xrechnung": "fcd470a1d1667ba4",
  "IT cii": "b335f5594001505d",
  "IT fa3": "08abb9a3f7b5b749",
  "IT fatturapa": "a45f5bd28526b3b1",
  "IT peppol-bis": "4492fdd872e6f2e7",
  "IT semantic default": "c99825a8c5300a5d",
  "IT semantic full": "c99825a8c5300a5d",
  "IT ubl": "5ef82d35f85d48ec",
  "IT xrechnung": "260864859aeaae13",
  "NL cii": "6a64b156119ebca2",
  "NL fa3": "a0d5888d703aa06a",
  "NL fatturapa": "b3d8d9c22a47c8a2",
  "NL peppol-bis": "7ee6c0444c25e36a",
  "NL semantic default": "5137299ab519b6e7",
  "NL semantic full": "5137299ab519b6e7",
  "NL ubl": "40a77f6f040dbf25",
  "NL xrechnung": "bbd7e34f41f7fd24",
  "PL cii": "469fc9995b451d05",
  "PL fa3": "5977a96b83cbf0f2",
  "PL fatturapa": "82ef4ba1abe74494",
  "PL peppol-bis": "edc53085d9f140e0",
  "PL semantic default": "c4613ec2b0cb7cc5",
  "PL semantic full": "c4613ec2b0cb7cc5",
  "PL ubl": "04f036d9c613f833",
  "PL xrechnung": "47830ffbc161f001",
  "PT cii": "2f76081d9300abeb",
  "PT fa3": "480adfa2211f2944",
  "PT fatturapa": "9b9c944c0b5bb835",
  "PT peppol-bis": "b2c3f0e5e2308904",
  "PT semantic default": "d0c5ff949f4b6901",
  "PT semantic full": "d0c5ff949f4b6901",
  "PT ubl": "ea9ff73d81f81a23",
  "PT xrechnung": "24e95a77dbfdc1ff",
  "none cii": "throws 8c78e784db9d1906",
  "none fa3": "fa6698826b68a989",
  "none fatturapa": "19ac807ccb464f8f",
  "none peppol-bis": "throws 8c78e784db9d1906",
  "none semantic default": "throws 8c78e784db9d1906",
  "none semantic full": "throws 8c78e784db9d1906",
  "none ubl": "throws 8c78e784db9d1906",
  "none xrechnung": "throws 8c78e784db9d1906",
}
`;

exports[`format output per seller and buyer country > seller DZ: every format is byte-identical to the pinned output 1`] = `
{
  "Atlantis cii": "throws 8c78e784db9d1906",
  "Atlantis fa3": "639db8896e589ad8",
  "Atlantis fatturapa": "6770b646d376d1fb",
  "Atlantis peppol-bis": "throws 8c78e784db9d1906",
  "Atlantis semantic default": "throws 8c78e784db9d1906",
  "Atlantis semantic full": "throws 8c78e784db9d1906",
  "Atlantis ubl": "throws 8c78e784db9d1906",
  "Atlantis xrechnung": "throws 8c78e784db9d1906",
  "DE cii": "78f684bb0902d2a3",
  "DE fa3": "4654049d70860ac1",
  "DE fatturapa": "440f8f2c07f756b0",
  "DE peppol-bis": "fd317213b0dbcc7d",
  "DE semantic default": "22fdfed26f4ac9aa",
  "DE semantic full": "22fdfed26f4ac9aa",
  "DE ubl": "53d412264284590d",
  "DE xrechnung": "f3df76ca13d5b0e7",
  "DZ cii": "9b069d52566ebb10",
  "DZ fa3": "521e015647b9f980",
  "DZ fatturapa": "fa05b087947818e2",
  "DZ peppol-bis": "a26122289974a0e0",
  "DZ semantic default": "ea9bf930e2da1b16",
  "DZ semantic full": "ea9bf930e2da1b16",
  "DZ ubl": "eb095b8df49e21ed",
  "DZ xrechnung": "84c5cf7b78f335bf",
  "FR cii": "a0c4cd2073437796",
  "FR fa3": "c73f8c544079463d",
  "FR fatturapa": "f77f0ab3cd26d905",
  "FR peppol-bis": "dd347a776a3c8e5e",
  "FR semantic default": "8e2bd8d4ceff05c2",
  "FR semantic full": "8e2bd8d4ceff05c2",
  "FR ubl": "3cbe3b1a6963398d",
  "FR xrechnung": "b50ce903bda8f40b",
  "IT cii": "f0d7a225efe6d80f",
  "IT fa3": "5c004a1693b00cdf",
  "IT fatturapa": "23f2d146676729c9",
  "IT peppol-bis": "9c0a7c5918bcd924",
  "IT semantic default": "ac71ab55c3b7ecc1",
  "IT semantic full": "ac71ab55c3b7ecc1",
  "IT ubl": "f11b5409af4732f3",
  "IT xrechnung": "d117469c7d9d6fd9",
  "NL cii": "f2c8eeeb4c05d2b7",
  "NL fa3": "7a5cdddb9af5424d",
  "NL fatturapa": "84ed49250dc28d69",
  "NL peppol-bis": "f28ed890d8ff1ff1",
  "NL semantic default": "9aed62b947806c24",
  "NL semantic full": "9aed62b947806c24",
  "NL ubl": "f28e2d0d3b277493",
  "NL xrechnung": "7c078f3de8872ffa",
  "PL cii": "ecbc1983b029cf39",
  "PL fa3": "fba9a729355366c0",
  "PL fatturapa": "655dd16d0f79c108",
  "PL peppol-bis": "c5bc8b9333806818",
  "PL semantic default": "b30ab0d913aac3cd",
  "PL semantic full": "b30ab0d913aac3cd",
  "PL ubl": "141122b128da801f",
  "PL xrechnung": "65b751c40ab7bbc9",
  "PT cii": "abd17783df8cc641",
  "PT fa3": "e5a6ca44b6a90ce2",
  "PT fatturapa": "082a4081d4342033",
  "PT peppol-bis": "5976782d9d23d36d",
  "PT semantic default": "06d1aec3ac9d285c",
  "PT semantic full": "06d1aec3ac9d285c",
  "PT ubl": "185e3b1884d5105d",
  "PT xrechnung": "443fa6c6533e6a92",
  "none cii": "throws 8c78e784db9d1906",
  "none fa3": "dbdc6c3d2b01c820",
  "none fatturapa": "135aa3a090729cd4",
  "none peppol-bis": "throws 8c78e784db9d1906",
  "none semantic default": "throws 8c78e784db9d1906",
  "none semantic full": "throws 8c78e784db9d1906",
  "none ubl": "throws 8c78e784db9d1906",
  "none xrechnung": "throws 8c78e784db9d1906",
}
`;

exports[`format output per seller and buyer country > seller FR: every format is byte-identical to the pinned output 1`] = `
{
  "Atlantis cii": "throws 8c78e784db9d1906",
  "Atlantis fa3": "90d3d2b557454d8c",
  "Atlantis fatturapa": "1cfe50a61554bdf3",
  "Atlantis peppol-bis": "throws 8c78e784db9d1906",
  "Atlantis semantic default": "throws 8c78e784db9d1906",
  "Atlantis semantic full": "throws 8c78e784db9d1906",
  "Atlantis ubl": "throws 8c78e784db9d1906",
  "Atlantis xrechnung": "throws 8c78e784db9d1906",
  "DE cii": "0d13a2177899fda6",
  "DE fa3": "c862263bef55adbd",
  "DE fatturapa": "4d475d02391797c1",
  "DE peppol-bis": "45fe06081f66e71a",
  "DE semantic default": "76f671204091608e",
  "DE semantic full": "e5feedf6171638e9",
  "DE ubl": "d49bc732b016ba1a",
  "DE xrechnung": "5fd7a32f3685db26",
  "DZ cii": "16d24ce5664de983",
  "DZ fa3": "4373a6ec3cfb3c4d",
  "DZ fatturapa": "e0ecea3d2676cfd7",
  "DZ peppol-bis": "d11e7fd2739bf9a3",
  "DZ semantic default": "c89473b365c6e9d1",
  "DZ semantic full": "69371dad46621360",
  "DZ ubl": "cc11ba3bc4f68351",
  "DZ xrechnung": "75e268172fcaabc0",
  "FR cii": "be6c3be0cb01518c",
  "FR fa3": "10ee4ef529d8baa2",
  "FR fatturapa": "857c0d824efc6e52",
  "FR peppol-bis": "98f5dcd3ecb41f80",
  "FR semantic default": "f1f727931c90f482",
  "FR semantic full": "6a19013e535c7f0e",
  "FR ubl": "595275a7d186a454",
  "FR xrechnung": "8a325105cb3ae627",
  "IT cii": "66f24fc1466d9f8c",
  "IT fa3": "8f71b23afa668f15",
  "IT fatturapa": "dc17c905035f70e6",
  "IT peppol-bis": "39a543a0fdd07a2e",
  "IT semantic default": "7e457b2159a60d50",
  "IT semantic full": "df57d922dbc7e134",
  "IT ubl": "1e84ae91d4533ec6",
  "IT xrechnung": "481aeae0b5a6b5e6",
  "NL cii": "5476b96e08e32144",
  "NL fa3": "eecd7451b1c595db",
  "NL fatturapa": "8d2d8ca6f2dc8ed3",
  "NL peppol-bis": "3e68e932d4803223",
  "NL semantic default": "08cd4feffd9f8906",
  "NL semantic full": "032a30ac97607992",
  "NL ubl": "0977d1804482454e",
  "NL xrechnung": "7b769b40a263ca79",
  "PL cii": "acc06791aaf5d248",
  "PL fa3": "9d017908d90cef2a",
  "PL fatturapa": "bc8ece6716954629",
  "PL peppol-bis": "3439df6e7f9ecdca",
  "PL semantic default": "051375bbe0a7fb4a",
  "PL semantic full": "6d2ee6f5f0ec4d21",
  "PL ubl": "898347355c2afe96",
  "PL xrechnung": "e252e770afb47b80",
  "PT cii": "6c889f19d842f01c",
  "PT fa3": "02258c6d813c2ba1",
  "PT fatturapa": "4b817cf51cb482e1",
  "PT peppol-bis": "335a94915cf911bc",
  "PT semantic default": "b56b90c489603bf0",
  "PT semantic full": "d8646efd192bd4f2",
  "PT ubl": "f7b85a2c7e896eda",
  "PT xrechnung": "3bd379baf12dafec",
  "none cii": "throws 8c78e784db9d1906",
  "none fa3": "8487edf5b8958eff",
  "none fatturapa": "9d51d8ee0a04c08d",
  "none peppol-bis": "throws 8c78e784db9d1906",
  "none semantic default": "throws 8c78e784db9d1906",
  "none semantic full": "throws 8c78e784db9d1906",
  "none ubl": "throws 8c78e784db9d1906",
  "none xrechnung": "throws 8c78e784db9d1906",
}
`;

exports[`format output per seller and buyer country > seller IT: every format is byte-identical to the pinned output 1`] = `
{
  "Atlantis cii": "throws 8c78e784db9d1906",
  "Atlantis fa3": "60e7ef0315374a40",
  "Atlantis fatturapa": "3fe6cae42edb7149",
  "Atlantis peppol-bis": "throws 8c78e784db9d1906",
  "Atlantis semantic default": "throws 8c78e784db9d1906",
  "Atlantis semantic full": "throws 8c78e784db9d1906",
  "Atlantis ubl": "throws 8c78e784db9d1906",
  "Atlantis xrechnung": "throws 8c78e784db9d1906",
  "DE cii": "b6696bf73e9e8b2c",
  "DE fa3": "66d914a8fe0ac334",
  "DE fatturapa": "d0f59b904f27e225",
  "DE peppol-bis": "7de39f9fd45046e5",
  "DE semantic default": "d6f7e54f2c2319ea",
  "DE semantic full": "d6f7e54f2c2319ea",
  "DE ubl": "9ce2d2a66a4761db",
  "DE xrechnung": "b0472f6085729b68",
  "DZ cii": "e6a4f409dc2c0fd0",
  "DZ fa3": "3433a8d6fb33a587",
  "DZ fatturapa": "915d44d28310541d",
  "DZ peppol-bis": "a377a4425576044b",
  "DZ semantic default": "7c86c3645906f16f",
  "DZ semantic full": "7c86c3645906f16f",
  "DZ ubl": "6e7d17d405b3ba8a",
  "DZ xrechnung": "e7d03b32aee5926c",
  "FR cii": "f0ec142a32b011fc",
  "FR fa3": "86737183e327f49c",
  "FR fatturapa": "78de08e30c7db635",
  "FR peppol-bis": "79380895d0981d63",
  "FR semantic default": "999f942c4a1f722d",
  "FR semantic full": "999f942c4a1f722d",
  "FR ubl": "8de3e96bdb5eae2b",
  "FR xrechnung": "6a59297756763da6",
  "IT cii": "19019bc3fae38f31",
  "IT fa3": "67af3199e927f787",
  "IT fatturapa": "2840e17a0010bb1b",
  "IT peppol-bis": "ff290d5bdf3236f9",
  "IT semantic default": "a7143d0912025c4e",
  "IT semantic full": "a7143d0912025c4e",
  "IT ubl": "fd1a64b8e7ebfdf3",
  "IT xrechnung": "20e3567f6d6afd3f",
  "NL cii": "e6eba9cc38fd39b6",
  "NL fa3": "66f12091b48bfa6e",
  "NL fatturapa": "5ddeb22575ef998a",
  "NL peppol-bis": "37ccf3465102ce73",
  "NL semantic default": "452de04d9ecd2410",
  "NL semantic full": "452de04d9ecd2410",
  "NL ubl": "0e954343012eb4f0",
  "NL xrechnung": "1f892c667aa29a40",
  "PL cii": "6dd7810f42327f6c",
  "PL fa3": "fa9d5fdfb4c6d75a",
  "PL fatturapa": "186025dcfb3f3d6d",
  "PL peppol-bis": "6fbf2374b7a45318",
  "PL semantic default": "baf75fc62c4a3f27",
  "PL semantic full": "baf75fc62c4a3f27",
  "PL ubl": "3a12426766dd2eae",
  "PL xrechnung": "e1d79ce2ccf02a87",
  "PT cii": "33794d959acf8783",
  "PT fa3": "35cf57f9adc6ef1a",
  "PT fatturapa": "479fabdb17da64e1",
  "PT peppol-bis": "bd532542eb734979",
  "PT semantic default": "df039f7231c46b75",
  "PT semantic full": "df039f7231c46b75",
  "PT ubl": "42aa4ce00eec90b6",
  "PT xrechnung": "1f3ee64bb32d840b",
  "none cii": "throws 8c78e784db9d1906",
  "none fa3": "072ccaac4f233141",
  "none fatturapa": "8c9cbf4447f92c99",
  "none peppol-bis": "throws 8c78e784db9d1906",
  "none semantic default": "throws 8c78e784db9d1906",
  "none semantic full": "throws 8c78e784db9d1906",
  "none ubl": "throws 8c78e784db9d1906",
  "none xrechnung": "throws 8c78e784db9d1906",
}
`;

exports[`format output per seller and buyer country > seller NL: every format is byte-identical to the pinned output 1`] = `
{
  "Atlantis cii": "throws 8c78e784db9d1906",
  "Atlantis fa3": "1825e43d22207298",
  "Atlantis fatturapa": "1d373587c81540e6",
  "Atlantis peppol-bis": "throws 8c78e784db9d1906",
  "Atlantis semantic default": "throws 8c78e784db9d1906",
  "Atlantis semantic full": "throws 8c78e784db9d1906",
  "Atlantis ubl": "throws 8c78e784db9d1906",
  "Atlantis xrechnung": "throws 8c78e784db9d1906",
  "DE cii": "680c99054da7e1f0",
  "DE fa3": "e4a14a0584bee8cb",
  "DE fatturapa": "1bd8dccfa80667e9",
  "DE peppol-bis": "7bdfc93583cc28b4",
  "DE semantic default": "5143a81cb79e80db",
  "DE semantic full": "5143a81cb79e80db",
  "DE ubl": "0045229ff375c228",
  "DE xrechnung": "3d4a4a7143411d71",
  "DZ cii": "43e49b37423d4d04",
  "DZ fa3": "6bd3ea0c52995a14",
  "DZ fatturapa": "f202fc26d5ba5d7a",
  "DZ peppol-bis": "801fcfbe6b395926",
  "DZ semantic default": "46c17d657abac564",
  "DZ semantic full": "46c17d657abac564",
  "DZ ubl": "7fd7b99a32e60cd2",
  "DZ xrechnung": "3163dae8297ec460",
  "FR cii": "c6b32a796238b13b",
  "FR fa3": "16d3de68977ff3a3",
  "FR fatturapa": "baaae0ec16c97b6a",
  "FR peppol-bis": "111cca2bd564fc49",
  "FR semantic default": "0a97f903f0a234cb",
  "FR semantic full": "0a97f903f0a234cb",
  "FR ubl": "86d0ff0677dc9c41",
  "FR xrechnung": "25f40c81e9d46871",
  "IT cii": "d153109b2c743d43",
  "IT fa3": "89fd4c8720994d19",
  "IT fatturapa": "63d2484898e08625",
  "IT peppol-bis": "6523a1c67bc70047",
  "IT semantic default": "19324a426d1c6e97",
  "IT semantic full": "19324a426d1c6e97",
  "IT ubl": "40583d94e6710929",
  "IT xrechnung": "a13302f4b9b8d146",
  "NL cii": "37c24e6596dbb0cd",
  "NL fa3": "06e95fdf258a88a3",
  "NL fatturapa": "008530627fdee986",
  "NL peppol-bis": "e39cfd94a2311835",
  "NL semantic default": "b5e78826222aba5e",
  "NL semantic full": "b5e78826222aba5e",
  "NL ubl": "0db11a9cfa7e2bd1",
  "NL xrechnung": "3e5807350e9e9174",
  "PL cii": "74f8a476e64e111b",
  "PL fa3": "9906bd327c7d346b",
  "PL fatturapa": "315d58b242396cdf",
  "PL peppol-bis": "9f72137345470ff3",
  "PL semantic default": "22c98ccbc2972873",
  "PL semantic full": "22c98ccbc2972873",
  "PL ubl": "2493d963c8a5b196",
  "PL xrechnung": "f0b7d816138cb045",
  "PT cii": "e26da6f679976e5c",
  "PT fa3": "e409000c4348044f",
  "PT fatturapa": "3a45f805cc6c3fe1",
  "PT peppol-bis": "49056bcef206ebe5",
  "PT semantic default": "2f89284c145127a3",
  "PT semantic full": "2f89284c145127a3",
  "PT ubl": "cf2c0c07681dcbce",
  "PT xrechnung": "47a40106e3a63010",
  "none cii": "throws 8c78e784db9d1906",
  "none fa3": "6bdec4fba5b0e9a4",
  "none fatturapa": "60e117d68452a6ff",
  "none peppol-bis": "throws 8c78e784db9d1906",
  "none semantic default": "throws 8c78e784db9d1906",
  "none semantic full": "throws 8c78e784db9d1906",
  "none ubl": "throws 8c78e784db9d1906",
  "none xrechnung": "throws 8c78e784db9d1906",
}
`;

exports[`format output per seller and buyer country > seller PL: every format is byte-identical to the pinned output 1`] = `
{
  "Atlantis cii": "throws 8c78e784db9d1906",
  "Atlantis fa3": "f31591da1df97b68",
  "Atlantis fatturapa": "799d38dd6571b3d8",
  "Atlantis peppol-bis": "throws 8c78e784db9d1906",
  "Atlantis semantic default": "throws 8c78e784db9d1906",
  "Atlantis semantic full": "throws 8c78e784db9d1906",
  "Atlantis ubl": "throws 8c78e784db9d1906",
  "Atlantis xrechnung": "throws 8c78e784db9d1906",
  "DE cii": "c0eca00c30fdbdc2",
  "DE fa3": "402713cbab005f8c",
  "DE fatturapa": "653ac26e7ef9bf1b",
  "DE peppol-bis": "85f5b00b2a82ac78",
  "DE semantic default": "2d7cd44d11c1dc09",
  "DE semantic full": "2d7cd44d11c1dc09",
  "DE ubl": "69b8362435715134",
  "DE xrechnung": "cdc85832896ed418",
  "DZ cii": "963310ba348736e0",
  "DZ fa3": "b3f1debcb5863278",
  "DZ fatturapa": "0cc594291292cfcc",
  "DZ peppol-bis": "3ba6d7cb1c98c4e9",
  "DZ semantic default": "40fa517cf822212d",
  "DZ semantic full": "40fa517cf822212d",
  "DZ ubl": "7832618659213afa",
  "DZ xrechnung": "be288ea34f5a5d9b",
  "FR cii": "506f47f026f1f814",
  "FR fa3": "38793bf2c782c557",
  "FR fatturapa": "96aab539b8c60b86",
  "FR peppol-bis": "46d72fac582b78b2",
  "FR semantic default": "45dc97fd4f1d1a8c",
  "FR semantic full": "45dc97fd4f1d1a8c",
  "FR ubl": "8f0566efadd9bd21",
  "FR xrechnung": "6c20a45bdfe47f24",
  "IT cii": "fc4a0dd345e98ebc",
  "IT fa3": "df9d1a66fa73b1f5",
  "IT fatturapa": "de700623e48b4110",
  "IT peppol-bis": "db51b843c5605271",
  "IT semantic default": "f5f1456ee6a38226",
  "IT semantic full": "f5f1456ee6a38226",
  "IT ubl": "f26334f1ae66f826",
  "IT xrechnung": "45ea329ef11a44b2",
  "NL cii": "3428074f955f2d52",
  "NL fa3": "62a5537033423506",
  "NL fatturapa": "0d8f070423131f82",
  "NL peppol-bis": "c1944ad56eeaa6c1",
  "NL semantic default": "c99acb2bad64b0e1",
  "NL semantic full": "c99acb2bad64b0e1",
  "NL ubl": "2a2f2d404b98649b",
  "NL xrechnung": "4268533d4991f9fd",
  "PL cii": "659a9bce86e0c22e",
  "PL fa3": "6d3209a8218883f1",
  "PL fatturapa": "7f62e6df7638bd36",
  "PL peppol-bis": "9c7042b354a0d742",
  "PL semantic default": "2ff2014ff9b30555",
  "PL semantic full": "2ff2014ff9b30555",
  "PL ubl": "418604136452a43f",
  "PL xrechnung": "b2a41d3d0d812890",
  "PT cii": "8edf9c4be601b9a2",
  "PT fa3": "805b92b01399c02a",
  "PT fatturapa": "8d61a7046fac04bf",
  "PT peppol-bis": "37e983f130396504",
  "PT semantic default": "67f705755f568fc0",
  "PT semantic full": "67f705755f568fc0",
  "PT ubl": "f368be03aae21ff3",
  "PT xrechnung": "ede943dd202d094d",
  "none cii": "throws 8c78e784db9d1906",
  "none fa3": "e8a562b2fdbbf42b",
  "none fatturapa": "8d9431fd4bfb1cf8",
  "none peppol-bis": "throws 8c78e784db9d1906",
  "none semantic default": "throws 8c78e784db9d1906",
  "none semantic full": "throws 8c78e784db9d1906",
  "none ubl": "throws 8c78e784db9d1906",
  "none xrechnung": "throws 8c78e784db9d1906",
}
`;

exports[`format output per seller and buyer country > seller PT: every format is byte-identical to the pinned output 1`] = `
{
  "Atlantis cii": "throws 8c78e784db9d1906",
  "Atlantis fa3": "7327a3c1d20cf567",
  "Atlantis fatturapa": "21a0c87672e6b8ec",
  "Atlantis peppol-bis": "throws 8c78e784db9d1906",
  "Atlantis semantic default": "throws 8c78e784db9d1906",
  "Atlantis semantic full": "throws 8c78e784db9d1906",
  "Atlantis ubl": "throws 8c78e784db9d1906",
  "Atlantis xrechnung": "throws 8c78e784db9d1906",
  "DE cii": "53750fb6b235e8ee",
  "DE fa3": "e3cf8a50f5d22d53",
  "DE fatturapa": "032d22729a4acd67",
  "DE peppol-bis": "9a809225e25e1ad2",
  "DE semantic default": "74bb7e1318bee5a2",
  "DE semantic full": "74bb7e1318bee5a2",
  "DE ubl": "5e6c66dda110588a",
  "DE xrechnung": "18a10120e4adef47",
  "DZ cii": "ae4acb9bbbe750ae",
  "DZ fa3": "d44904ef6eea71b6",
  "DZ fatturapa": "fb73c87bd4f6fc79",
  "DZ peppol-bis": "e3faff32b982b696",
  "DZ semantic default": "44fc9ef4b8e673ad",
  "DZ semantic full": "44fc9ef4b8e673ad",
  "DZ ubl": "7d00824d38ceb9a5",
  "DZ xrechnung": "68361ff033a81636",
  "FR cii": "c1837e198c08c02b",
  "FR fa3": "91483fd31436b79e",
  "FR fatturapa": "1649c72e4db8f995",
  "FR peppol-bis": "27d432255a5a0c76",
  "FR semantic default": "ab72a7d0b704e8d5",
  "FR semantic full": "ab72a7d0b704e8d5",
  "FR ubl": "a11495197e102e1b",
  "FR xrechnung": "b15604842b5b67fb",
  "IT cii": "5e95d2045ae3efbe",
  "IT fa3": "bc4aa284f40e2065",
  "IT fatturapa": "4a5824880b1b48cc",
  "IT peppol-bis": "0b74a9c1bd61a598",
  "IT semantic default": "8cd733677b917fd3",
  "IT semantic full": "8cd733677b917fd3",
  "IT ubl": "820e931c10daa646",
  "IT xrechnung": "938335d52257002c",
  "NL cii": "7c25ae5ebbfde613",
  "NL fa3": "be6f5e4ab25a75f5",
  "NL fatturapa": "b7b5c4e8ff5f4ddb",
  "NL peppol-bis": "81687f9891ca7d93",
  "NL semantic default": "ef98903d762a8884",
  "NL semantic full": "ef98903d762a8884",
  "NL ubl": "2e565cfee165d6da",
  "NL xrechnung": "bf4ed4b4c6ed4d3d",
  "PL cii": "09a794d6fb7d5eb8",
  "PL fa3": "d71093d1c95a9a31",
  "PL fatturapa": "94f19a9e64384a85",
  "PL peppol-bis": "1af22fd005c533eb",
  "PL semantic default": "8a633fea3d50d095",
  "PL semantic full": "8a633fea3d50d095",
  "PL ubl": "9c22590cc0bc4a7c",
  "PL xrechnung": "4b5abd779684e738",
  "PT cii": "894c40f2b9b3ff1f",
  "PT fa3": "763ac46d028c999d",
  "PT fatturapa": "adfc1402598464b6",
  "PT peppol-bis": "1ac68aa65aedb971",
  "PT semantic default": "378c20c3e6d9fb9c",
  "PT semantic full": "378c20c3e6d9fb9c",
  "PT ubl": "cdf933f429efe497",
  "PT xrechnung": "841f672913f23cdb",
  "none cii": "throws 8c78e784db9d1906",
  "none fa3": "6c55f2569c122de5",
  "none fatturapa": "b05e9a55a701fc64",
  "none peppol-bis": "throws 8c78e784db9d1906",
  "none semantic default": "throws 8c78e784db9d1906",
  "none semantic full": "throws 8c78e784db9d1906",
  "none ubl": "throws 8c78e784db9d1906",
  "none xrechnung": "throws 8c78e784db9d1906",
}
`;

exports[`format output per seller and buyer country > seller none: every format is byte-identical to the pinned output 1`] = `
{
  "Atlantis cii": "throws 14ab22cf8d32fba1",
  "Atlantis fa3": "7b8e2843c29555d4",
  "Atlantis fatturapa": "5129bf56106db0bf",
  "Atlantis peppol-bis": "throws 14ab22cf8d32fba1",
  "Atlantis semantic default": "throws 14ab22cf8d32fba1",
  "Atlantis semantic full": "throws 14ab22cf8d32fba1",
  "Atlantis ubl": "throws 14ab22cf8d32fba1",
  "Atlantis xrechnung": "throws 14ab22cf8d32fba1",
  "DE cii": "throws 14ab22cf8d32fba1",
  "DE fa3": "0e867566a468f2e5",
  "DE fatturapa": "52489324c0824bcf",
  "DE peppol-bis": "throws 14ab22cf8d32fba1",
  "DE semantic default": "throws 14ab22cf8d32fba1",
  "DE semantic full": "throws 14ab22cf8d32fba1",
  "DE ubl": "throws 14ab22cf8d32fba1",
  "DE xrechnung": "throws 14ab22cf8d32fba1",
  "DZ cii": "throws 14ab22cf8d32fba1",
  "DZ fa3": "e85951c2c05e1a74",
  "DZ fatturapa": "9d2ff3225c50fa35",
  "DZ peppol-bis": "throws 14ab22cf8d32fba1",
  "DZ semantic default": "throws 14ab22cf8d32fba1",
  "DZ semantic full": "throws 14ab22cf8d32fba1",
  "DZ ubl": "throws 14ab22cf8d32fba1",
  "DZ xrechnung": "throws 14ab22cf8d32fba1",
  "FR cii": "throws 14ab22cf8d32fba1",
  "FR fa3": "be66373d5aa417e7",
  "FR fatturapa": "1c0be3e270793a9d",
  "FR peppol-bis": "throws 14ab22cf8d32fba1",
  "FR semantic default": "throws 14ab22cf8d32fba1",
  "FR semantic full": "throws 14ab22cf8d32fba1",
  "FR ubl": "throws 14ab22cf8d32fba1",
  "FR xrechnung": "throws 14ab22cf8d32fba1",
  "IT cii": "throws 14ab22cf8d32fba1",
  "IT fa3": "75f9ce01af0aeaad",
  "IT fatturapa": "8834a7be40aa671c",
  "IT peppol-bis": "throws 14ab22cf8d32fba1",
  "IT semantic default": "throws 14ab22cf8d32fba1",
  "IT semantic full": "throws 14ab22cf8d32fba1",
  "IT ubl": "throws 14ab22cf8d32fba1",
  "IT xrechnung": "throws 14ab22cf8d32fba1",
  "NL cii": "throws 14ab22cf8d32fba1",
  "NL fa3": "c8930e9f37d212c1",
  "NL fatturapa": "bb7642a1c8f46739",
  "NL peppol-bis": "throws 14ab22cf8d32fba1",
  "NL semantic default": "throws 14ab22cf8d32fba1",
  "NL semantic full": "throws 14ab22cf8d32fba1",
  "NL ubl": "throws 14ab22cf8d32fba1",
  "NL xrechnung": "throws 14ab22cf8d32fba1",
  "PL cii": "throws 14ab22cf8d32fba1",
  "PL fa3": "b779cf65a5378994",
  "PL fatturapa": "8a20d2b6fa28fa41",
  "PL peppol-bis": "throws 14ab22cf8d32fba1",
  "PL semantic default": "throws 14ab22cf8d32fba1",
  "PL semantic full": "throws 14ab22cf8d32fba1",
  "PL ubl": "throws 14ab22cf8d32fba1",
  "PL xrechnung": "throws 14ab22cf8d32fba1",
  "PT cii": "throws 14ab22cf8d32fba1",
  "PT fa3": "8b8d3f3a068639d8",
  "PT fatturapa": "61a1c2ef10541bb7",
  "PT peppol-bis": "throws 14ab22cf8d32fba1",
  "PT semantic default": "throws 14ab22cf8d32fba1",
  "PT semantic full": "throws 14ab22cf8d32fba1",
  "PT ubl": "throws 14ab22cf8d32fba1",
  "PT xrechnung": "throws 14ab22cf8d32fba1",
  "none cii": "throws 14ab22cf8d32fba1",
  "none fa3": "efa625c7c1e6dc41",
  "none fatturapa": "8f4563dd5263af1b",
  "none peppol-bis": "throws 14ab22cf8d32fba1",
  "none semantic default": "throws 14ab22cf8d32fba1",
  "none semantic full": "throws 14ab22cf8d32fba1",
  "none ubl": "throws 14ab22cf8d32fba1",
  "none xrechnung": "throws 14ab22cf8d32fba1",
}
`;
